--- a/public/index.html
+++ b/public/index.html
@@ -7,15 +7,44 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <style>
+        body {
+          background-color:darkseagreen;
+        }
+    </style>
 
-    <title>Hello, world!</title>
+    <title>Reversi</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-
-    <!-- Optional JavaScript; choose one of the two! -->
-
-    <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <div class="container-fluid">
+      <div class="row m-3">
+        <div class="col text-center">
+          <a class="btn btn-success text-nowrap" href="about.html">About</a>
+        </div>
+        <div class="col text-center">
+          <a class="btn btn-success text-nowrap" href="https://en.wikipedia.org/wiki/Reversi">Rules</a>
+        </div>
+      </div>  
+      <div class="row m-3">
+        <div class="col text-center">
+          <img class="img-fluid" src="assets/images/reversi-logo-1.png" alt="Reversi Logo 1"/>
+        </div>
+      </div>  
+      <div class="row align-items-center justify-content-center m-3">
+        <div class="col-8">
+          <div class="input-group">
+          <span class="input-group-text" id="displayName">Name</span>
+          <input type="text" class="form-control text-nowrap" id="nameInput" placeholder="Choose your display name" aria-label="Enter your display name for use while playing Reversi" aria-describedby="displayName"/>
+          <button type="submit" class="btn btn-primary text-nowrap" id="lobbyButton" onclick="window.location='lobby.html'">Enter Lobby</button>
+          </div>
+        </div>
+      </div>  
+      <div class="row m-3">
+        <div class="col text-center">
+          <img class="img-fluid" src="assets/images/reversi-logo-2.png" alt="Reversi Logo 2"/>
+        </div>
+      </div>  
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
   </body>
 </html>
