--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,12 @@
           background-color:darkseagreen;
         }
     </style>
-
+    <script>
+      function goToLobby(){
+        let username = $('#nameInput').val();
+        window.location.href = "lobby.html?username="+username;
+      }
+    </script>
     <title>Reversi</title>
   </head>
   <body>
@@ -35,7 +40,7 @@
           <div class="input-group">
           <span class="input-group-text" id="displayName">Name</span>
           <input type="text" class="form-control text-nowrap" id="nameInput" placeholder="Choose your display name" aria-label="Enter your display name for use while playing Reversi" aria-describedby="displayName"/>
-          <button type="submit" class="btn btn-primary text-nowrap" id="lobbyButton" onclick="window.location='lobby.html'">Enter Lobby</button>
+          <button type="submit" class="btn btn-primary text-nowrap" id="lobbyButton" onclick="goToLobby()">Enter Lobby</button>
           </div>
         </div>
       </div>  
@@ -46,5 +51,6 @@
       </div>  
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
   </body>
 </html>
