--- a/public/lobby.html
+++ b/public/lobby.html
@@ -21,8 +21,18 @@
         <div class="col text-center">
           <h3>Lobby</h3>
         </div>
-      </div>  
+      </div> 
+      
+      <div class="row m-3">
+        <div class="col">
+          <h4>Messages</h4>
+          <div id="messages">
+          </div>
+        </div>
+      </div> 
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
+    <script src="assets/js/main.js"></script>
   </body>
 </html>
