--- a/public/lobby.html
+++ b/public/lobby.html
@@ -9,7 +9,16 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
         .headerrow {
-          background-color:darkseagreen;
+          background-color:darkseagreen; 
+        }
+        .join_room_response {
+        background-color:rgb(225, 255, 164);
+        margin 1px 1px 1px 10px;
+        }
+        .chat_message {
+        font-size:125%;
+        margin 1px 1px 1px 1px;
+        color:rgb(173, 49, 255)
         }
     </style>
 
@@ -25,6 +34,14 @@
       
       <div class="row m-3">
         <div class="col">
+          <div class="row align-items-center justify-content-center m-3">
+            <div class="col-8">
+              <div class="input-group">
+              <input type="text" class="form-control text-nowrap" id="chatMessage" placeholder="Enter your message here" aria-label="Enter your message to send to the chat room"/>
+              <button type="submit" class="btn btn-primary text-nowrap" id="chatButton" onclick="sendChatMessage()">Send</button>
+              </div>
+            </div>
+          </div>  
           <h4>Messages</h4>
           <div id="messages">
           </div>
@@ -33,6 +50,7 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
+    <script src="https://cdn.socket.io/4.0.1/socket.io.min.js" integrity="sha384-LzhRnpGmQP+lOvWruF/lgkcqD+WDVt9fU3H4BWmwP5u5LTmkUGafMcpZKNObVMLU" crossorigin="anonymous"></script>
     <script src="assets/js/main.js"></script>
   </body>
 </html>
