--- a/public/index.html
+++ b/public/index.html
@@ -12,12 +12,7 @@
           background-color:darkseagreen;
         }
     </style>
-    <script>
-      function goToLobby(){
-        let username = encodeURI($('#nameInput').val());
-        window.location.href = "lobby.html?username="+username;
-      }
-    </script>
+    
     <title>Reversi</title>
   </head>
   <body>
@@ -52,5 +47,18 @@
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha384-vtXRMe3mGCbOeY7l30aIg8H9p3GdeSe4IFlP6G8JMa7o7lXvnz3GFKzPxzJdPfGK" crossorigin="anonymous"></script>
+    <script>
+      function goToLobby(){
+        let username = encodeURI($('#nameInput').val());
+        window.location.href = "lobby.html?username="+username;
+      }
+      $('#nameInput').keypress(function (e){
+      let key = e.which;
+      if( key == 13){ //the enter key
+      $('button[id = lobbyButton]').click();
+      return false;
+      }
+    })
+    </script>
   </body>
 </html>
