--- a/public/game.html
+++ b/public/game.html
@@ -29,11 +29,11 @@
       <div class="row m-3">
         <div class="col-md-8 text-center justify-content-center">
           <h3 id="my_color">My Color</h3><br/>
-          <img class="img-fluid" src="assets/images/Mint.gif" alt="Mint Score"/>
+          <img class="img-fluid" src="assets/images/mint.gif" alt="Mint Score"/>
           <span id="mintsum">Mint Sum</span>
           <span id="vs">vs</span>
           <span id="purplesum">Purple Sum</span>
-          <img class="img-fluid" src="assets/images/Purple.gif" alt="Purple Score"/>
+          <img class="img-fluid" src="assets/images/purple.gif" alt="Purple Score"/>
         </div>
           <div class="col-md-4 text-end justify-content-end">
             <div id="quit">Quit Button</div>
