--- a/public/lobby.html
+++ b/public/lobby.html
@@ -9,19 +9,26 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <style>
         .headerrow {
-          background-color:darkseagreen; 
+          background-color:rgb(176, 226, 215);
+          border-radius: 10px; 
+          padding: 20px;
         }
         #messagePane {
-          background-color:rgb(212, 249, 212); 
+          border-radius: 10px;
+          padding: 20px;
+          background-color:rgb(238, 215, 255); 
         }
         .join_room_response,
         .left_room_response {
-        background-color:rgb(225, 255, 164);
+        background-color:rgb(200, 160, 229);
+        border-radius: 10px;
+        padding: 20px;
         }
         .chat_message {
         font-size:125%;
+        padding: 7px;
         margin: 1px 1px 1px 1px;
-        color:rgb(173, 49, 255)
+        color:rgb(0, 0, 0)
         }
     </style>
 
